--- a/viz/TDA/index.html
+++ b/viz/TDA/index.html
@@ -242,8 +242,8 @@
                 <div id="graph"></div>
 
                 <script>
-                    // dummyGraph();
-                    drawPlots();
+                    dummyGraph();
+                    // drawPlots();
 
                     function dummyGraph() {
                         fetch('../datasets/miserables.json').then(res => res.json()).then(data => {
