--- a/viz/TDA/index.html
+++ b/viz/TDA/index.html
@@ -242,8 +242,8 @@
                 <div id="graph"></div>
 
                 <script>
-                    dummyGraph();
-                    // drawPlots();
+                    // dummyGraph();
+                    drawPlots();
 
                     function dummyGraph() {
                         fetch('../datasets/miserables.json').then(res => res.json()).then(data => {
@@ -272,15 +272,15 @@
                         // }
                         // var data = require('../datasets/farrell2018_pca.json');
                         d3.json('../datasets/farrell2018_pca.json'), function(error,data) {
-                        console.log(data);
+                        // console.log(data);
 
                         for (var i = 0; i < data.data.length; i++) {
                             var newNumber1 = data.data[i].emb[0]; 
                             var newNumber2 = data.data[i].emb[1];
                             dataset.push([newNumber1, newNumber2]); // Add new number to array
                         }
-                        console.log(dataset);
-                    }
+                        // console.log(dataset);
+                    // }
 
                         // d3.json("../dataset/farrell2018_pca.json", function(error, data) {
                         //     data.forEach(function(d) {
@@ -349,6 +349,7 @@
                             .attr("class", "y axis")
                             .attr("transform", "translate(" + padding + ",0)")
                             .call(yAxis);
+}
 
                         // On click, update with new data
                         d3.select("h4")
