--- a/viz/TDA/index.html
+++ b/viz/TDA/index.html
@@ -18,7 +18,7 @@
     <link href="../../css/devicons.css" rel="stylesheet">
     <link href="../../css/simple-line-icons.css" rel="stylesheet">
 
-    <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+    <!-- <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script> -->
 </head>
 
 <style type="text/css">
@@ -471,7 +471,7 @@
     <!-- Custom scripts for this template -->
     <script src="../../js/resume.js"></script>
     <script src="//unpkg.com/force-graph"></script>
-    <!-- <script src="https://d3js.org/d3.v4.min.js"></script> -->
+    <script src="//d3js.org/d3.v4.min.js"></script>
     <script src="../jsfunctions/tda.js"></script>
 </body>
 <!-- 
