--- a/viz/TDA/index.html
+++ b/viz/TDA/index.html
@@ -472,7 +472,7 @@
     <!-- Custom scripts for this template -->
     <script src="../../js/resume.js"></script>
     <script src="//unpkg.com/force-graph"></script>
-    <script src="https://d3js.org/d3.v4.min.js"></script>
+    <script src="../../js/d3.min.js"></script>
     <script src="../jsfunctions/tda.js"></script>
 </body>
 <!-- 
