--- a/viz/TDA/index.html
+++ b/viz/TDA/index.html
@@ -310,11 +310,10 @@
                             .range([canvas_height - padding, padding]); // remember y starts on top going down so we flip
 
                         // Define X axis
-                        var xAxis = d3.axisBottom(xRange).ticks(5);
-                            // .orient("bottom")
+                        var xAxis = d3.axisBottom(xScale).ticks(5);
 
                         // Define Y axis
-                        var yAxis = d3.axisBottom(yRange).ticks(5);
+                        var yAxis = d3.axisBottom(yScale).ticks(5);
 
                         // Create SVG element
                         var svg = d3.select("#graph") // This is where we put our vis
