--- a/viz/TDA/index.html
+++ b/viz/TDA/index.html
@@ -274,14 +274,14 @@
                         // }
                         // var data = require('../datasets/farrell2018_pca.json');
                         d3.json('../datasets/farrell2018_pca.json').then(function(data) {
-                        console.log(data);
+                        // console.log(data);
 
                         for (var i = 0; i < data.data.length; i++) {
                             var newNumber1 = data.data[i].emb[0]; 
                             var newNumber2 = data.data[i].emb[1];
                             dataset.push([newNumber1, newNumber2]); // Add new number to array
                         }
-                        // console.log(dataset);
+                        console.log(dataset);
                     });
 
                         // d3.json("../dataset/farrell2018_pca.json", function(error, data) {
