--- a/viz/TDA/index.html
+++ b/viz/TDA/index.html
@@ -266,11 +266,11 @@
                     function drawPlots() {
                         var dataset = []; // Initialize empty array
 
-                        var numDataPoints = 100; // Number of dummy data points
+                        var numDataPoints = 1000; // Number of dummy data points
                         var maxRange = Math.random() * 1000; // Max range of new values
                         for (var i = 0; i < numDataPoints; i++) {
-                            var newNumber1 = Math.floor(Math.random() * maxRange) + 0.1; // New random integer
-                            var newNumber2 = Math.floor(Math.random() * maxRange) + 0.1; // New random integer
+                            var newNumber1 = Math.floor(Math.random() * maxRange)/1000; // New random integer
+                            var newNumber2 = Math.floor(Math.random() * maxRange)/1000; // New random integer
                             dataset.push([newNumber1, newNumber2]); // Add new number to array
                         }
 
@@ -359,8 +359,8 @@
                                 var maxRange = Math.random() * 1000; // Get max range of new values
                                 dataset = []; // Initialize empty array
                                 for (var i = 0; i < numValues; i++) {
-                                    var newNumber1 = Math.floor(Math.random() * maxRange); // Random int for x
-                                    var newNumber2 = Math.floor(Math.random() * maxRange); // Random int for y
+                                    var newNumber1 = Math.floor(Math.random() * maxRange)/1000; // Random int for x
+                                    var newNumber2 = Math.floor(Math.random() * maxRange)/1000; // Random int for y
                                     dataset.push([newNumber1, newNumber2]); // Add new numbers to array
                                 }
 
