[DBG] add Number() to parse float for JSON

--- a/viz/TDA/index.html
+++ b/viz/TDA/index.html
@@ -280,8 +280,8 @@
 
                     //     // for (var i = 0; i < data.data.length; i++) {
                     //     for (var i = 0; i < 100; i++) {
-                    //         var newNumber1 = data.data[i].emb[0]; 
-                    //         var newNumber2 = data.data[i].emb[1];
+                    //         var newNumber1 = Number(data.data[i].emb[0]); 
+                    //         var newNumber2 = Number(data.data[i].emb[1]);
                     //         dataset.push([newNumber1, newNumber2]); // Add new number to array
                     //     }
                     //     console.log(dataset);
@@ -369,8 +369,8 @@
 
                         // for (var i = 0; i < data.data.length; i++) {
                         for (var i = 0; i < 100; i++) {
-                            var newNumber1 = data.data[i].emb[0]; 
-                            var newNumber2 = data.data[i].emb[1];
+                            var newNumber1 = Number(data.data[i].emb[0]); 
+                            var newNumber2 = Number(data.data[i].emb[1]);
                             dataset.push([newNumber1, newNumber2]); // Add new number to array
                         }
                         });
