--- a/viz/TDA/index.html
+++ b/viz/TDA/index.html
@@ -265,27 +265,26 @@
 
                     function drawPlots() {
                         var dataset = []; // Initialize empty array
-
                         var numDataPoints = 100; // Number of dummy data points
-                        var maxRange = Math.random() * 1000; // Max range of new values
+
+                        // var maxRange = Math.random() * 1000; // Max range of new values
+                        // for (var i = 0; i < numDataPoints; i++) {
+                        //     var newNumber1 = Math.floor(Math.random() * maxRange)/1000; // New random integer
+                        //     var newNumber2 = Math.floor(Math.random() * maxRange)/1000; // New random integer
+                        //     dataset.push([newNumber1, newNumber2]); // Add new number to array
+                        // }
+
+                        d3.json('../datasets/farrell2018_pca.json').then(function(data) {
+                        // console.log(data);
+
+                        // for (var i = 0; i < data.data.length; i++) {
                         for (var i = 0; i < numDataPoints; i++) {
-                            var newNumber1 = Math.floor(Math.random() * maxRange)/1000; // New random integer
-                            var newNumber2 = Math.floor(Math.random() * maxRange)/1000; // New random integer
+                            var newNumber1 = Number(data.data[i].emb[0]); 
+                            var newNumber2 = Number(data.data[i].emb[1]);
                             dataset.push([newNumber1, newNumber2]); // Add new number to array
                         }
-
-
-                    //     d3.json('../datasets/farrell2018_pca.json').then(function(data) {
-                    //     // console.log(data);
-
-                    //     // for (var i = 0; i < data.data.length; i++) {
-                    //     for (var i = 0; i < 100; i++) {
-                    //         var newNumber1 = Number(data.data[i].emb[0]); 
-                    //         var newNumber2 = Number(data.data[i].emb[1]);
-                    //         dataset.push([newNumber1, newNumber2]); // Add new number to array
-                    //     }
-                    //     console.log(dataset);
-                    // });
+                        // console.log(dataset);
+                    });
 
                         console.log(dataset);
 
