--- a/viz/TDA/index.html
+++ b/viz/TDA/index.html
@@ -279,8 +279,8 @@
 
                         // for (var i = 0; i < data.data.length; i++) {
                         for (var i = 0; i < numDataPoints; i++) {
-                            var newNumber1 = Number(data.data[i].emb[0])+1000; 
-                            var newNumber2 = Number(data.data[i].emb[1])+1000;
+                            var newNumber1 = Number(data.data[i].emb[0]).toFixed(3); 
+                            var newNumber2 = Number(data.data[i].emb[1]).toFixed(3);
                             dataset.push([newNumber1, newNumber2]); // Add new number to array
                         }
                         // console.log(dataset);
@@ -368,8 +368,8 @@
 
                         // for (var i = 0; i < data.data.length; i++) {
                         for (var i = 0; i < numDataPoints; i++) {
-                            var newNumber1 = Number(data.data[i].emb[0]); 
-                            var newNumber2 = Number(data.data[i].emb[1]);
+                            var newNumber1 = Number(data.data[i].emb[0]).toFixed(3); 
+                            var newNumber2 = Number(data.data[i].emb[1]).toFixed(3);
                             dataset.push([newNumber1, newNumber2]); // Add new number to array
                         }
                         });
