--- a/viz/TDA/index.html
+++ b/viz/TDA/index.html
@@ -364,16 +364,22 @@
                                     dataset.push([newNumber1, newNumber2]); // Add new numbers to array
                                 }
 
-                        // d3.json('../datasets/farrell2018_umap.json').then(function(data) {
-                        // // console.log(data);
+                        d3.json('../datasets/farrell2018_umap.json').then(function(data) {
+                        // console.log(data);
 
+for (var i = 0; i < numValues; i++) {
+                                    var newNumber1 = Math.floor(Math.random() * maxRange)/1000; // Random int for x
+                                    var newNumber2 = Math.floor(Math.random() * maxRange)/1000; // Random int for y
+                                    dataset.push([newNumber1, newNumber2]); // Add new numbers to array
+                                }
+                                
                         // // for (var i = 0; i < data.data.length; i++) {
                         // for (var i = 0; i < numDataPoints; i++) {
                         //     var newNumber1 = Math.round(Number(data.data[i].emb[0]) * decimalplace) / decimalplace; 
                         //     var newNumber2 = Math.round(Number(data.data[i].emb[1]) * decimalplace) / decimalplace;
                         //     dataset.push([newNumber1, newNumber2]); // Add new number to array
                         // }
-                        // });
+                        });
                         console.log(dataset);
                     
                                 // Update scale domains
