--- a/viz/TDA/index.html
+++ b/viz/TDA/index.html
@@ -358,21 +358,27 @@
                                 var numValues = dataset.length; // Get original dataset's length
                                 var maxRange = Math.random() * 1000; // Get max range of new values
                                 dataset = []; // Initialize empty array
-                                for (var i = 0; i < numValues; i++) {
-                                    var newNumber1 = Math.floor(Math.random() * maxRange)/1000; // Random int for x
-                                    var newNumber2 = Math.floor(Math.random() * maxRange)/1000; // Random int for y
-                                    dataset.push([newNumber1, newNumber2]); // Add new numbers to array
-                                }
+                                // for (var i = 0; i < numValues; i++) {
+                                //     var newNumber1 = Math.floor(Math.random() * maxRange)/1000; // Random int for x
+                                //     var newNumber2 = Math.floor(Math.random() * maxRange)/1000; // Random int for y
+                                //     dataset.push([newNumber1, newNumber2]); // Add new numbers to array
+                                // }
 
                         d3.json('../datasets/farrell2018_umap.json').then(function(data) {
                         // console.log(data);
 
-                        // for (var i = 0; i < data.data.length; i++) {
-                        for (var i = 0; i < numValues; i++) {
-                            var newNumber1 = parseFloat(data.data[i].emb[0]); 
-                            var newNumber2 = parseFloat(data.data[i].emb[1]);
-                            dataset.push([newNumber1, newNumber2]); // Add new number to array
-                        }
+for (var i = 0; i < numValues; i++) {
+                                    var newNumber1 = Math.floor(Math.random() * maxRange)/1000; // Random int for x
+                                    var newNumber2 = Math.floor(Math.random() * maxRange)/1000; // Random int for y
+                                    dataset.push([newNumber1, newNumber2]); // Add new numbers to array
+                                }
+                                
+                        // // for (var i = 0; i < data.data.length; i++) {
+                        // for (var i = 0; i < numValues; i++) {
+                        //     var newNumber1 = parseFloat(data.data[i].emb[0]); 
+                        //     var newNumber2 = parseFloat(data.data[i].emb[1]);
+                        //     dataset.push([newNumber1, newNumber2]); // Add new number to array
+                        // }
                         });
                         console.log(dataset);
                     
