--- a/viz/TDA/index.html
+++ b/viz/TDA/index.html
@@ -269,23 +269,23 @@
                         var decimalplace = 1000;
 
                         var maxRange = Math.random() * 1000; // Max range of new values
+                        // for (var i = 0; i < numDataPoints; i++) {
+                        //     var newNumber1 = Math.floor(Math.random() * maxRange)/1000; // New random integer
+                        //     var newNumber2 = Math.floor(Math.random() * maxRange)/1000; // New random integer
+                        //     dataset.push([newNumber1, newNumber2]); // Add new number to array
+                        // }
+
+                        d3.json('../datasets/farrell2018_pca.json').then(function(data) {
+                        // console.log(data);
+
+                        // for (var i = 0; i < data.data.length; i++) {
                         for (var i = 0; i < numDataPoints; i++) {
-                            var newNumber1 = Math.floor(Math.random() * maxRange)/1000; // New random integer
-                            var newNumber2 = Math.floor(Math.random() * maxRange)/1000; // New random integer
+                            var newNumber1 = Math.round(Number(data.data[i].emb[0]) * decimalplace) / decimalplace; 
+                            var newNumber2 = Math.round(Number(data.data[i].emb[1]) * decimalplace) / decimalplace;
                             dataset.push([newNumber1, newNumber2]); // Add new number to array
                         }
-
-                    //     d3.json('../datasets/farrell2018_pca.json').then(function(data) {
-                    //     // console.log(data);
-
-                    //     // for (var i = 0; i < data.data.length; i++) {
-                    //     for (var i = 0; i < numDataPoints; i++) {
-                    //         var newNumber1 = Math.round(Number(data.data[i].emb[0]) * decimalplace) / decimalplace; 
-                    //         var newNumber2 = Math.round(Number(data.data[i].emb[1]) * decimalplace) / decimalplace;
-                    //         dataset.push([newNumber1, newNumber2]); // Add new number to array
-                    //     }
-                    //     // console.log(dataset);
-                    // });
+                        // console.log(dataset);
+                    
 
                         console.log(dataset);
 
@@ -304,15 +304,11 @@
 
                         // Create scale functions
                         var xScale = d3.scaleLinear() // xScale is width of graphic
-                            .domain([0, d3.max(dataset, function(d) {
-                                return d[0]; // input domain
-                            })])
+                            .domain([d3.min(dataset, function(d) {return d[0];}), d3.max(dataset, function(d) {return d[0];})])
                             .range([padding, canvas_width - padding * 2]); // output range
 
                         var yScale = d3.scaleLinear() // yScale is height of graphic
-                            .domain([0, d3.max(dataset, function(d) {
-                                return d[1]; // input domain
-                            })])
+                            .domain([d3.min(dataset, function(d) {return d[1];}), d3.max(dataset, function(d) {return d[1];})])
                             .range([canvas_height - padding, padding]); // remember y starts on top going down so we flip
 
                         // Define X axis
@@ -352,17 +348,14 @@
                             .attr("transform", "translate(" + padding + ",0)")
                             .call(yAxis);
 
+});
+
                         // On click, update with new data
                         d3.select("h4")
                             .on("click", function() {
                                 var numValues = dataset.length; // Get original dataset's length
                                 var maxRange = Math.random() * 1000; // Get max range of new values
                                 dataset = []; // Initialize empty array
-                                // for (var i = 0; i < numValues; i++) {
-                                //     var newNumber1 = Math.floor(Math.random() * maxRange)/1000; // Random int for x
-                                //     var newNumber2 = Math.floor(Math.random() * maxRange)/1000; // Random int for y
-                                //     dataset.push([newNumber1, newNumber2]); // Add new numbers to array
-                                // }
 
                         d3.json('../datasets/farrell2018_umap.json').then(function(data) {
                         // console.log(data);
@@ -376,12 +369,8 @@
                         console.log(dataset);
                     
                                 // Update scale domains
-                                xScale.domain([0, d3.max(dataset, function(d) {
-                                    return d[0];
-                                })]);
-                                yScale.domain([0, d3.max(dataset, function(d) {
-                                    return d[1];
-                                })]);
+                                xScale.domain([d3.min(dataset, function(d) {return d[0];}), d3.max(dataset, function(d) {return d[0];})]);
+                                yScale.domain([d3.min(dataset, function(d) {return d[1];}), d3.max(dataset, function(d) {return d[1];})]);
 
                                 // Update circles
                                 svg.selectAll("circle")
