--- a/viz/TDA/index.html
+++ b/viz/TDA/index.html
@@ -195,9 +195,9 @@
                             <td class="mb-5 text-primary">
                                 <input type="radio" name="embedding" value="../datasets/farrell2018_pca.json" checked> &nbsp;PCA [1] &nbsp;
                                 <input type="radio" name="embedding" value="mds"> &nbsp;MDS [2] &nbsp;
-                                <input type="radio" name="embedding" value="svd"> &nbsp;SVD &nbsp;
+                                <input type="radio" name="embedding" value="../datasets/farrell2018_svd.json"> &nbsp;SVD &nbsp;
                                 <input type="radio" name="embedding" value="tsne"> &nbsp;t-SNE [3] &nbsp;
-                                <input type="radio" name="embedding" value="../datasets/farrell2018_umap.json"> &nbsp;UMAP &nbsp;
+                                <input type="radio" name="embedding" value="../datasets/farrell2018_umap.json" onclick="updateEmbedding(this);"> &nbsp;UMAP &nbsp;
                                 <input type="radio" name="embedding" value="isomap"> &nbsp;ISOMAP &nbsp;
                                 <input type="radio" name="embedding" value="jpca"> &nbsp;jPCA [5] &nbsp;
                                 <input type="radio" name="embedding" value="pmds"> &nbsp;pMDS [6] &nbsp;
@@ -271,25 +271,13 @@
                         embedding = document.querySelector('input[name="embedding"]:checked').value;
                         d3.json(embedding).then(function(data) {
                             // console.log(data);
-
                             for (var i = 0; i < data.data.length; i++) {
                             // for (var i = 0; i < numDataPoints; i++) {
                                 var newNumber1 = parseFloat(data.data[i].emb[0]);
                                 var newNumber2 = parseFloat(data.data[i].emb[1]);
-                                dataset.push([newNumber1, newNumber2]); // Add new number to array
+                                dataset.push([newNumber1, newNumber2]); 
                             }
                             // console.log(dataset);
-
-
-                            console.log(dataset);
-
-
-                            // d3.json("../dataset/farrell2018_pca.json", function(error, data) {
-                            //     data.forEach(function(d) {
-
-                            //     }
-                            //     // console.log(data);
-                            // });
 
                             // Setup settings for graphic
                             var canvas_width = 800;
@@ -351,17 +339,94 @@
                                 .call(yAxis);
 
                             // On click, update with new data
-                            d3.select("h4")
-                                .on("click", function() {
-                                    var numValues = dataset.length; // Get original dataset's length
-                                    var maxRange = Math.random() * 1000; // Get max range of new values
-                                    dataset = []; // Initialize empty array
 
-                                    d3.json('../datasets/farrell2018_umap.json').then(function(data) {
+                            // d3.select("h4")
+                            //     .on("click", function() {
+                            //         var numValues = dataset.length; // Get original dataset's length
+                            //         var maxRange = Math.random() * 1000; // Get max range of new values
+                            //         dataset = []; // Initialize empty array
+
+                            //         d3.json('../datasets/farrell2018_umap.json').then(function(data) {
+                            //             // console.log(data);
+
+                            //             for (var i = 0; i < data.data.length; i++) {
+                            //             // for (var i = 0; i < numValues; i++) {
+                            //                 var newNumber1 = parseFloat(data.data[i].emb[0]);
+                            //                 var newNumber2 = parseFloat(data.data[i].emb[1]);
+                            //                 dataset.push([newNumber1, newNumber2]); // Add new number to array
+                            //             }
+                            //             console.log(dataset);
+
+                            //             // Update scale domains
+                            //             xScale.domain([d3.min(dataset, function(d) {
+                            //                 return d[0];
+                            //             }), d3.max(dataset, function(d) {
+                            //                 return d[0];
+                            //             })]);
+                            //             yScale.domain([d3.min(dataset, function(d) {
+                            //                 return d[1];
+                            //             }), d3.max(dataset, function(d) {
+                            //                 return d[1];
+                            //             })]);
+
+                            //             // Update circles
+                            //             svg.selectAll("circle")
+                            //                 .data(dataset) // Update with new data
+                            //                 .transition() // Transition from old to new
+                            //                 .duration(2000) // Length of animation
+                            //                 .on("start", function() { // Start animation
+                            //                     d3.select(this) // 'this' means the current element
+                            //                         .attr("fill", "red") // Change color
+                            //                         .attr("r", 3); // Change size
+                            //                 })
+                            //                 .delay(function(d, i) {
+                            //                     return i / dataset.length * 500; // Dynamic delay (i.e. each item delays a little longer)
+                            //                 })
+                            //                 //.ease("linear")  // Transition easing - default 'variable' (i.e. has acceleration), also: 'circle', 'elastic', 'bounce', 'linear'
+                            //                 .attr("cx", function(d) {
+                            //                     return xScale(d[0]); // Circle's X
+                            //                 })
+                            //                 .attr("cy", function(d) {
+                            //                     return yScale(d[1]); // Circle's Y
+                            //                 })
+                            //                 .on("end", function() { // End animation
+                            //                     d3.select(this) // 'this' means the current element
+                            //                         .transition()
+                            //                         .duration(500)
+                            //                         .attr("fill", "black") // Change color
+                            //                         .attr("r", 2); // Change radius
+                            //                 });
+
+
+
+                            //         // Update X Axis
+                            //         svg.select(".x.axis")
+                            //             .transition()
+                            //             .duration(1000)
+                            //             .call(xAxis);
+
+                            //         // Update Y Axis
+                            //         svg.select(".y.axis")
+                            //             .transition()
+                            //             .duration(100)
+                            //             .call(yAxis);
+
+
+                            //         });
+
+                            //     });
+                        });
+                    }
+
+function updateEmbedding(emb) {
+    var embedding = emb.value;
+
+                                    var dataset = []; // Initialize empty array
+
+                                    d3.json(embedding).then(function(data) {
                                         // console.log(data);
 
                                         for (var i = 0; i < data.data.length; i++) {
-                                        // for (var i = 0; i < numValues; i++) {
                                             var newNumber1 = parseFloat(data.data[i].emb[0]);
                                             var newNumber2 = parseFloat(data.data[i].emb[1]);
                                             dataset.push([newNumber1, newNumber2]); // Add new number to array
@@ -408,9 +473,6 @@
                                                     .attr("r", 2); // Change radius
                                             });
 
-
-                                    });
-
                                     // Update X Axis
                                     svg.select(".x.axis")
                                         .transition()
@@ -424,8 +486,7 @@
                                         .call(yAxis);
 
                                 });
-                        });
-                    }
+}
 
                     function pcaTDAGraph() {
                         fetch('../datasets/farrell2018_pca.json').then(res => res.json()).then(data => {
